--- a/tm-in-power.html
+++ b/tm-in-power.html
@@ -12,6 +12,7 @@
     <p>He accidentally got trapped in the dumbest trap ever.</p>
     <p>He got out, but unfortunately was in another better trap.</p>
     <p>He stayed in this trap for a month.</p>
+    <p>This trap was in the Old Stevian Bank, and this information was just learned a few days ago (Today is day 2 of the week, and it is the week of Beav (Thursday afternoon for humans)</p>
     <button><a href="tm-again.html">Previous</a></button>
     <button><a href="a-chance.html">Next</a></button>
 </body>
